<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- THỜI GIAN -->
            <TextView
                android:id="@+id/tvStart"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:gravity="center_vertical"
                android:text="@string/tv_start_time"
                app:layout_constraintBottom_toBottomOf="@id/etStart"
                app:layout_constraintEnd_toStartOf="@id/glTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/etStart" />

            <TextView
                android:id="@+id/tvEnd"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autoSizeMaxTextSize="20sp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="1sp"
                android:autoSizeTextType="uniform"
                android:gravity="center_vertical"
                android:text="@string/tv_end_time"
                app:layout_constraintBottom_toBottomOf="@id/etEnd"
                app:layout_constraintEnd_toStartOf="@id/glTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/etEnd" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.15" />

            <EditText
                android:id="@+id/etStart"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="@drawable/task_border"
                android:clickable="true"
                android:focusable="false"
                android:gravity="top|start"
                android:hint="@string/enter_start_time"
                android:inputType="text"
                app:layout_constraintEnd_toStartOf="@id/btnCancel"
                app:layout_constraintStart_toStartOf="@id/glTime"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etEnd"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/task_border"
                android:clickable="true"
                android:focusable="false"
                android:gravity="top|start"
                android:hint="@string/enter_end_time"
                android:inputType="text"
                app:layout_constraintEnd_toStartOf="@id/btnCancel"
                app:layout_constraintStart_toStartOf="@id/glTime"
                app:layout_constraintTop_toBottomOf="@id/etStart" />

            <ImageView
                android:id="@+id/btnCancel"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cancel_button_desc"
                android:padding="4dp"
                android:src="@drawable/ic_cancel"
                app:layout_constraintBottom_toTopOf="@id/barrierEnd"
                app:layout_constraintEnd_toStartOf="@id/btnSave"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/red" />

            <ImageView
                android:id="@+id/btnSave"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/save_task_button_desc"
                android:padding="4dp"
                android:src="@drawable/ic_done"
                app:layout_constraintBottom_toTopOf="@id/barrierEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/light_blue_600" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrierEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="etEnd" />

            <!-- LOCATION -->
            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Location"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEnd" />

            <EditText
                android:id="@+id/etLocation"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="@drawable/task_border"
                android:drawableStart="@drawable/ic_location_on"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="Enter location (Coming soon)"
                android:paddingStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLocation" />

            <!-- PRIORITY -->
            <TextView
                android:id="@+id/tvPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Priority"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etLocation" />

            <RadioGroup
                android:id="@+id/rgPriority"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:weightSum="4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPriority">

                <RadioButton
                    android:id="@+id/rbLow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/priority_low"
                    android:text="Low"
                    android:textColor="@color/priority_low"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rbMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/priority_medium"
                    android:checked="true"
                    android:text="Med"
                    android:textColor="@color/priority_medium"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rbHigh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/priority_high"
                    android:text="High"
                    android:textColor="@color/priority_high"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/rbUrgent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/priority_urgent"
                    android:text="Urgent"
                    android:textColor="@color/priority_urgent"
                    android:textSize="12sp" />
            </RadioGroup>

            <!-- TAGS SECTION -->
            <TextView
                android:id="@+id/tvTags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Tags"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rgPriority" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutTagSelection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTags">

                <ImageView
                    android:id="@+id/btnAddTag"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="4dp"
                    android:src="@drawable/ic_add"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/light_blue_600" />

                <!-- RecyclerView: Wrap Content, Max Height 80dp -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSelectedTags"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:scrollbars="vertical"
                    app:layout_constrainedHeight="true"
                    app:layout_constraintHeight_max="80dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btnAddTag"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- TITLE & DESCRIPTION -->
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/task_title"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutTagSelection" />

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="@drawable/task_border"
                android:gravity="top|start"
                android:hint="@string/enter_title"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/task_description"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etTitle" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:background="@drawable/task_border"
                android:gravity="top|start"
                android:hint="@string/enter_description"
                android:inputType="textMultiLine"
                android:minLines="3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>